test-cases/negative/test_097_conditional_type_mismatch.lay
# negative test: if condition with non-boolean value
# expected: type checker should catch this

if 5 then
  print 'hello'
end if


